# simple-cpp-runner

./: .gitignore  CMakeLists.txt  README.md  run.sh  setup.sh
